--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass",
-		"sass:watch": "sass --watch scss/main.scss  css/main.css"
+    "sass:watch": "sass --watch scss/main.scss  css/main.css"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,6 @@
   "homepage": "https://github.com/mauroguzman22/preEntrega#readme",
   "dependencies": {
     "sass": "^1.55.0"
-  }
+  },
+  "devDependencies": {}
 }
